syntax = "proto3";
package nftvault.nftvault;

// this line is used by starport scaffolding # proto/packet/import

option go_package = "nftvault/x/nftvault/types";

message NftvaultPacketData {
    oneof packet {
        NoData noData = 1;
        // this line is used by starport scaffolding # ibc/packet/proto/field
				RequestTransferPacketData requestTransferPacket = 2; // this line is used by starport scaffolding # ibc/packet/proto/field/number
    }
}

message NoData {
}

// RequestTransferPacketData defines a struct for the packet payload
message RequestTransferPacketData {
}

// RequestTransferPacketAck defines a struct for the packet acknowledgment
message RequestTransferPacketAck {
	}
// this line is used by starport scaffolding # ibc/packet/proto/message
